[tool.poetry]
name = "mini_bank"
version = "0.1.0"
description = "Mini bank CLI project with logging and Pydantic"
authors = ["Ayehut <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"